Bug 1483485 - Require a restart after changing server or user name. r=mkmelin

Two changes:
- On start up, replace the value of .hostname/.userName with .realhostname/.realuserName
- Before server/user name change, show a restart required confirm dialog

With this change, .realhostname and .realuserName becomes obsolete, related code will be removed in a follow-up patch.

Differential Revision: https://phabricator.services.mozilla.com/D144790

--HG--
extra : amend_source : 731582efa44a0d33122636a7980b281de55157de