mail/locales/en-US/messenger/accountManager.ftl
@@ -10,6 +10,8 @@ account-action-add-newsgroup-account =
     .label = Add Newsgroup Account…
     .accesskey = N
 
+server-change-restart-required = Restart is required to apply the server name or username change.
+
 edit-vcard-dialog-accept-button = Save
     .accesskey = S
 edit-vcard-dialog-cancel-button = Cancel
